--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "gatsby": "^2.31.1",
+    "gatsby-plugin-sass": "^3.1.0",
     "gatsby-plugin-typography": "^2.11.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-typography": "^0.16.19",
+    "sass": "^1.32.5",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19"
   },
