--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass": "^1.37.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
     "stylelint": "^13.13.1"
