--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "netlify-cms-app": "^2.15.36",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -19,6 +20,7 @@
     "@svgr/webpack": "^5.5.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
+    "frontmatter-markdown-loader": "^3.6.3",
     "stylelint": "^13.13.1"
   }
 }
