--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npx netlify-cms-proxy-server & next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint"
   },
   "dependencies": {
+    "brfs": "^2.0.2",
     "classnames": "^2.3.1",
+    "gray-matter": "^4.0.3",
     "netlify-cms-app": "^2.15.36",
     "next": "11.0.1",
+    "raw-loader": "^4.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-markdown": "^6.0.3",
     "sass": "^1.37.0"
   },
   "devDependencies": {
