--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "brfs": "^2.0.2",
     "classnames": "^2.3.1",
+    "date-fns": "^2.23.0",
     "gray-matter": "^4.0.3",
     "netlify-cms-app": "^2.15.36",
     "next": "^11.1.0",
