--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^6.0.3",
-    "sass": "^1.37.0"
+    "sass": "^1.37.0",
+    "swiper": "^6.8.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
