config next-i18n and react-next-i18n

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,7 +11,7 @@
       "@icons/*": ["./public/images/icons/*"],
       "@styles/*": ["./styles/*"],
       "@utils/*": ["./utils/*"],
-      "@locale/*": ["./locale/*"],
+      "@locales/*": ["./locales/*"],
     }
   }
 }
