--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
     "gray-matter": "^4.0.3",
+    "i18next": "^20.4.0",
+    "i18next-resources-to-backend": "^1.0.0",
     "netlify-cms-app": "^2.15.36",
     "next": "^11.1.0",
     "raw-loader": "^4.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-i18next": "^11.11.4",
     "react-markdown": "^6.0.3",
     "sass": "^1.37.0",
     "swiper": "^6.8.1"
