finish i18next config

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -12,6 +12,7 @@
       "@styles/*": ["./styles/*"],
       "@utils/*": ["./utils/*"],
       "@locales/*": ["./locales/*"],
+      "@src/*": ["./src/*"],
     }
   }
 }
