--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "date-fns": "^2.23.0",
     "gray-matter": "^4.0.3",
     "i18next": "^20.4.0",
-    "i18next-resources-to-backend": "^1.0.0",
+    "i18next-http-backend": "^1.3.0",
     "netlify-cms-app": "^2.15.36",
     "next": "^11.1.0",
     "raw-loader": "^4.0.2",
