--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^11.1.0",
     "raw-loader": "^4.0.2",
     "react": "17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "react-i18next": "^11.11.4",
     "react-markdown": "^6.0.3",
