--- a/jsconfig.json
+++ b/jsconfig.json
@@ -13,6 +13,7 @@
       "@utils/*": ["./utils/*"],
       "@locales/*": ["./locales/*"],
       "@src/*": ["./src/*"],
+      "@static/*": ["./static/*"],
     }
   }
 }
