--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^11.1.0",
     "brfs": "^2.0.2",
     "classnames": "^2.3.1",
+    "cross-env": "^7.0.3",
     "date-fns": "^2.23.0",
     "gray-matter": "^4.0.3",
     "i18next": "^20.4.0",
