--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@cms/*": ["./src/cms/*"],
+      "@admin/*": ["./src/admin/*"],
       "@content/*": ["./src/content/*"],
       "@components/*": ["./src/components/*"],
       "@pages/*": ["./src/pages/*"],
